frontend/test/should_pass/exectype_AssignVarToAttributeUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(x.m=m);
	}
}