frontend/test/should_fail/exectype_AssignAttributeToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=::varia ;> {f:foo=x.fool}); // attribute does not exist
	}
}